--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.1",
     "hardhat": "^2.4.3"
+  },
+  "scripts": {
+    "test": "npx hardhat test"
   }
 }
